# nlptk

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
measurement/: assess_profile_job_title.py
nlptk/: __init__.py
nlptk/WIP/: README.md  compare_dict_to_text.py  compare_dicts.py  compare_dicts0.py  compare_dicts2.py  compare_dicts3.py  compare_dicts4.py  compute_coverage.py  rollup_compare_dicts.py  rollup_compare_dicts1.py  rollup_compare_dicts2.py  rollup_compare_dicts3.py  rollup_compare_dicts4.py  rollup_compare_dicts5.py  rollup_compare_dicts6.py
nlptk/cv/: downloader.py
nlptk/jrdatamodel/: json_resume.json  jsonresume_schema_20250414.json  pyschema.py
nlptk/jrmetrics/: compare_dict_to_text.py  compare_dicts.py  jrmetrics.py  measure_dict_v_dict.py  measure_dict_v_text.py  rollup.py  rollup_metrics.py  tmp_dvd.py  tmp_dvt.py
nlptk/jrprocessor/: jr_postprocess.py  jr_preprocess.py  jr_validation.py  jrpost.py  jrprep.py  jsonresume_schema.json  regex_patterns.py
nlptk/jsonresume/: converter.py
nlptk/t5_model/: s2s.py
nlptk/util/: file_reader.py
notebooks/: Explore_Education.ipynb  QA_retest.ipynb  validation_notebook.ipynb
tests/: response1.json  test_dvd_dvt.py  test_dvt_analysis.py  test_fix_json.py  test_foo.py  test_jr_validation.py  test_postprocess.py  test_pp_strip_from_items.py  text_resume_post_processing.py
tests/resources/: sample_parser_response.json
tests/resources/resumes/: Caracci_2025_MetroHealth.docx  Kentre.Horton.Resume.FinalDraft.docx
