[project]
name = "nlptk"
version = "0.1.0"
description = "Natural Language Processing Tool Kit"
authors = [
    { name = "The NLPist", email = "abobicesaevior@gmail.com" },
]
dependencies = [
    "jsonschema",
    "json-repair"
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nlptk"]

[tool.pdm]
distribution = true
